add JmsOperationTimedOutException to user-indicated-errors-base; add catch block for JmsOperationTimedOutException in AmqpClientActor and log a warning in this special case; fix sonar issues;
Signed-off-by: Stefan Maute <stefan.maute@bosch.io>