@@ -19,7 +19,6 @@ import java.util.List;
 import java.util.UUID;
 import java.util.concurrent.CountDownLatch;
 import java.util.function.UnaryOperator;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import java.util.stream.Stream;
 
@@ -72,7 +71,7 @@ public final class DefaultEvictingQueueTest {
         return Stream.iterate(0, UnaryOperator.identity())
                 .limit(n)
                 .map(unused -> UUID.randomUUID().toString())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Test
